@@ -7,22 +7,22 @@ MD5 33cdd958f1be433095a69bff6be18148 files/emacs-cvs-freebsd-sparc.patch 475
 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 files/emacs-cvs-freebsd-sparc.patch 475
 SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b files/emacs-cvs-freebsd-sparc.patch 475
 DIST emacs-22.0.97.tar.gz 37900456 RMD160 3bd5abe6fdf4e1574b6fda4b2e85cfbf171fbab4 SHA1 60a50581ac93fc850225a929cc0c04dec0e51f36 SHA256 1b2cd679a1cbb1b6971291beac5d68ae55be538691c1fc8164f936899b8a913b
-EBUILD emacs-cvs-22.0.97.ebuild 7359 RMD160 f0f483ecc893cbdd1ef012f27d2747553c8ae913 SHA1 de47b43def735a7fe3852fc5aead1dbd87e3105f SHA256 252f0cf3735b5ce7bb1b7c20dbf58e260b9f099884b809f390505c496fffd134
-MD5 c132f62387369650de04e79c5e1c654b emacs-cvs-22.0.97.ebuild 7359
-RMD160 f0f483ecc893cbdd1ef012f27d2747553c8ae913 emacs-cvs-22.0.97.ebuild 7359
-SHA256 252f0cf3735b5ce7bb1b7c20dbf58e260b9f099884b809f390505c496fffd134 emacs-cvs-22.0.97.ebuild 7359
-EBUILD emacs-cvs-22.0.9999-r9.ebuild 7514 RMD160 c2527841537126fae5f30aed638ed3ce7f232379 SHA1 ee1db107c7799d72c53b9b4bb1762b9e2b5fd062 SHA256 0dbf9b22f4cca43a769e3087be0381d76bcfaffaa1bbd790f7997985cbce5961
-MD5 aec69854b8305ee2d8cbb601d1981980 emacs-cvs-22.0.9999-r9.ebuild 7514
-RMD160 c2527841537126fae5f30aed638ed3ce7f232379 emacs-cvs-22.0.9999-r9.ebuild 7514
-SHA256 0dbf9b22f4cca43a769e3087be0381d76bcfaffaa1bbd790f7997985cbce5961 emacs-cvs-22.0.9999-r9.ebuild 7514
-EBUILD emacs-cvs-23.0.0-r5.ebuild 7751 RMD160 854ebb8b275f30aeecd1c41106d8ed285c42cefc SHA1 75fa56720f58b8f74d1734ba312c78f68e1ae349 SHA256 9521b9f079df149f1c20a58d9472aa40f41ec09c5fdd155db955af9bb270ac53
-MD5 833afb759a61872e16eb4db80da33111 emacs-cvs-23.0.0-r5.ebuild 7751
-RMD160 854ebb8b275f30aeecd1c41106d8ed285c42cefc emacs-cvs-23.0.0-r5.ebuild 7751
-SHA256 9521b9f079df149f1c20a58d9472aa40f41ec09c5fdd155db955af9bb270ac53 emacs-cvs-23.0.0-r5.ebuild 7751
-MISC ChangeLog 9944 RMD160 f92cbd2bcf7fe0037425149b70f66fc65455907a SHA1 5039b7a4e67c959a4e403e4c3c9c17685060f590 SHA256 49a2ab13d0ff62016096fc70b84fbdc47c6a61e109b6bf0d0fc24b6152c1dd74
-MD5 a949cc20612b2ac1fc16b5a4a28fb04b ChangeLog 9944
-RMD160 f92cbd2bcf7fe0037425149b70f66fc65455907a ChangeLog 9944
-SHA256 49a2ab13d0ff62016096fc70b84fbdc47c6a61e109b6bf0d0fc24b6152c1dd74 ChangeLog 9944
+EBUILD emacs-cvs-22.0.97.ebuild 7416 RMD160 9f87be5c3b98631765c1d48a1885cacf89db694e SHA1 2eabed0b4e9c5f898b5be670d58d9f2f7d7ac42f SHA256 5baf38fdbc9b2180b75a6246dfc88526311a1fba6acff653539c1842b0db489a
+MD5 c2b22e49c8d02a4bf404954e897e832a emacs-cvs-22.0.97.ebuild 7416
+RMD160 9f87be5c3b98631765c1d48a1885cacf89db694e emacs-cvs-22.0.97.ebuild 7416
+SHA256 5baf38fdbc9b2180b75a6246dfc88526311a1fba6acff653539c1842b0db489a emacs-cvs-22.0.97.ebuild 7416
+EBUILD emacs-cvs-22.0.9999-r9.ebuild 7571 RMD160 c5532d06d26c999551ee083f5b2c37714aac8cd8 SHA1 e4711158767cd96e5646fa2f8a10a92a7578e5ed SHA256 bc31e9939dffe772b0bd27715eeac9c57ae9fff3c7607c73b817be47e7a9bc97
+MD5 7ab72248e48215177511001eeab859c1 emacs-cvs-22.0.9999-r9.ebuild 7571
+RMD160 c5532d06d26c999551ee083f5b2c37714aac8cd8 emacs-cvs-22.0.9999-r9.ebuild 7571
+SHA256 bc31e9939dffe772b0bd27715eeac9c57ae9fff3c7607c73b817be47e7a9bc97 emacs-cvs-22.0.9999-r9.ebuild 7571
+EBUILD emacs-cvs-23.0.0-r5.ebuild 7812 RMD160 caec981f743d2af7200688bd0a45ef6bcaa747e4 SHA1 6da361db24f743fecb32eb500c74ef2dab2caed8 SHA256 95e2bdb5d545ea48640ff8e1683c5e91c706306d5d2d21a2e161a980d27cc874
+MD5 859a349092a15cfaad5ade7e498d9418 emacs-cvs-23.0.0-r5.ebuild 7812
+RMD160 caec981f743d2af7200688bd0a45ef6bcaa747e4 emacs-cvs-23.0.0-r5.ebuild 7812
+SHA256 95e2bdb5d545ea48640ff8e1683c5e91c706306d5d2d21a2e161a980d27cc874 emacs-cvs-23.0.0-r5.ebuild 7812
+MISC ChangeLog 10228 RMD160 c91fb10a4555a9b5f57f8e3915be6d8c6d38afed SHA1 3c90c75dfa31852255d7538a81fd70460a4e17d5 SHA256 1d36888eb5f7f06afb8ce1c93e237f19009273e4d24b71860c7470d878fc3737
+MD5 7fb50a6ab6a35b86c77f63c127003369 ChangeLog 10228
+RMD160 c91fb10a4555a9b5f57f8e3915be6d8c6d38afed ChangeLog 10228
+SHA256 1d36888eb5f7f06afb8ce1c93e237f19009273e4d24b71860c7470d878fc3737 ChangeLog 10228
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
