@@ -35,6 +35,7 @@ RDEPEND="sys-libs/ncurses
 		!motif? ( lesstif? ( x11-libs/lesstif ) ) )"
 
 DEPEND="${RDEPEND}
+	X? ( !gtk? ( Xaw3d? ( x11-libs/libXaw ) ) )
 	gzip-el? ( app-arch/gzip )"
 
 PROVIDE="virtual/emacs virtual/editor"
@@ -175,7 +176,7 @@ EOF
 		elisp-site-file-install 00emacs-cvs-${SLOT}-gentoo.el
 	fi
 
-	dodoc AUTHORS BUGS CONTRIBUTE ChangeLog MAINTAINERS README
+	dodoc AUTHORS BUGS CONTRIBUTE MAINTAINERS README || die "dodoc failed"
 }
 
 emacs-infodir-rebuild() {
