@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Apr 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
+  emacs-cvs-22.0.97.ebuild, emacs-cvs-22.0.9999-r9.ebuild,
+  emacs-cvs-23.0.0-r5.ebuild:
+  Added x11-libs/libXaw to DEPEND. Fixes bug #174453, reported by Wulf Krueger
+  <philantrop@gentoo.org>. Don't install top-level ChangeLog.
+
   12 Apr 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
   emacs-cvs-22.0.97.ebuild, emacs-cvs-22.0.9999-r9.ebuild,
   emacs-cvs-23.0.0-r5.ebuild:
